# collabz-ai-platform

./: .env.example  .gitignore  README.md  collections.nas.yaml  collections.yaml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docker/: Dockerfile  docker-compose.yml
scripts/: atualizar-tudo.ps1  atualizar.ps1  consultar.ps1  iniciar-api.ps1  instalar.ps1  perguntar.ps1  status.ps1
src/rag_ingest/: __init__.py  answer_formatter.py  api.py  ask.py  ask.py)OLD  assistant.py  assistant.py_old  config.py  context_builder.py  evaluate.py  extractors.py  grounding.py  hybrid_retriever.py  ingest.py  lexical.py  lexical_build.py  lexical_index.py  metadata_filter.py  metrics.py  models.py  prompt_manager.py  query.py  query_rewriter.py  reranker.py  response_depth.py  retrieval_policy.py  retrieve.py  retriever.py  rrf.py  source_quality.py  status.py
tests/: test_answer_formatter.py  test_api_streaming.py  test_chat_sources.py  test_chunking.py  test_grounding.py  test_hybrid_retriever.py  test_lexical.py  test_lexical_index.py  test_metadata_filter.py  test_metrics.py  test_ollama_fallback.py  test_prompt_manager.py  test_query_rewriter.py  test_reranker.py  test_response_depth.py  test_retrieval_policy.py  test_rrf.py  test_source_quality.py
tests/golden/: associacoes.json
